This file documents the revision history for the Monitoring Webinterface Thruk.

next:
          - added business process addon
          - show apache status in performance page
          - minemap performance improvements and reduced memory usage
          - configuration git browser got next and previous links
          - Bug Fixes
            - summary: fixed reports using host/servicegroups in combination with the mysql logcache
            - mysql logcache: fixed service cannot be NULL error on import
            - fixed encoding problem when using config tool over http
          - Warning:
            - reports plugin is deprecated and will be removed soon, please update to reports2 plugin

1.76-3   Tue Sep  3 23:00:09 CEST 2013
          - new site 'collapsed' panel for large setups
          - Bug Fixes
            - dashboard: removed unnecessary dependency

1.76-2   Sun Aug 25 19:08:23 CEST 2013
          - Bug Fixes
            - fixed update on debian/ubuntu

1.76     Fri Aug 23 12:17:25 CEST 2013
          - new options to set page titles: 'use_bookmark_titles' and 'use_dynamic_titles' (awiddersheim)
          - make sure huge site panels do not overlap screen
          - support $PLUGINDIR$ and other user macros from resource file
          - added support for apache 2.4 on debian based systems
          - removed curl support, LWP::Protocol::Net::Curl wasn't thread safe
          - panorama
            - performance improvements
            - delayed inactive panel rendering
          - Bug Fixes
            - fixed quoting downtime tasks
            - show error instead of empty result for a single failed instance
            - fixed rootid in statusmap when using filter
            - fixed audio alarms on problems page (random-xz)

1.74-2   Sat Jul 27 18:15:20 CEST 2013
          - show response from date/time check in quick commands
          - make sure IO::Socket::SSL is used for multiple parallel https connections
          - Bug Fixes